--- a/css/reset.css
+++ b/css/reset.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	font-family: 'Mooli', sans-serif;
+	background-color: #fbeedd;
 }
 ol, ul {
 	list-style: none;
