--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,109 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,400&family=Mooli&display=swap');
 
+.color{
+    background-color: #FFFFFF;
+}
+.contain{
+    object-fit:cover;
+}
+
+.margin-r{
+    margin-right: 7rem;
+}
+
+.align-top{
+    display: flex;
+    justify-content: center;
+}
+
 .align-x-y{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.header-container{
-    width:100%;
-    height:5rem;
+.align-y{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.social-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 2.2rem;
+    width: 20%;
+}
+
+.header-main{
+    width: 100%;
+    height:6rem;
+    z-index: 1;
+    position: absolute;
+}
+
+.header-top{
+    width: 84.5%;
+    height: 2rem;
+    justify-content: space-between;
+    background-color: #635ca1;
+    color:#FFFFFF;
+}
+
+.logo-min{
+    
+    width: 4rem;
+    height: 1.2rem;
+    background-color: #FFFFFF;
+}
+
+
+.header-container, .header01{
+    width: 84.5%;
+    height:4rem;
     display:flex;
     align-items:center;
-    z-index:1;
-    position: absolute;
-    background-color: #faa937;
-    justify-content:space-around;
-    font-family: 'Playpen Sans', cursive;
-    box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.58);
-    -webkit-box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.58);
-    -moz-box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.58);
+    background-color: #ebb949;
+    justify-content:space-between;
+    border-radius: 0 0 10px 10px;
+    font-family: 'Inter', cursive;
 }
 
 .logo{
     width: 15%;
     height: 3.5rem;
+    margin-left:1rem;
     object-fit:contain;
-    margin-left: 3.5rem;
+}
+
+.option-main{
+    display: flex;
+    justify-content: space-around;
+    width: 60%;
 }
 
 .options-container{
     display: flex;
-    justify-content: space-around;
-    width: 40%;
-    font-weight: 600;
-    color:#0060D4;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+    font-weight: 700;
+    color:#FFFFFF;
 }
 
 .option:hover{
-    color: aqua;
-    cursor:pointer;
+   cursor:pointer;
 }
 
 .enrollment{
-    width: 7%;
-    height: 3rem;
+    width: 13%;
+    height: 2.5rem;
     background-color: #0060D4;
     color: #FFFFFF;
     border-radius: 10px;
-    margin-right: 10rem;
-    font-weight: 600;
+    margin-right:0.3rem;
+    font-weight: 700;
 }
 
 .enrollment:hover{
@@ -58,16 +113,12 @@
 }
 
 .home-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-image: url("../images/background.svg");
+    background-image: url("../images/background/background.svg");
     width: 80%;
     height: 60rem;
     margin:auto;
     background-repeat: no-repeat;
     background-size: auto;
-    /* box-shadow: inset 0 0 20px rgba(0,0,0,1); */
 }
 .swiper {
     width: 35%;
@@ -91,182 +142,91 @@
   }
 
 
-.home-photos, .home-texts{
-    height: 40rem;
-    width: 50%;
-}
-
-.photo{
-    width: 25%;
-    height: 55%;
-    position: absolute;
-    border-radius: 8px;
-    -webkit-box-shadow: 0px 7px 19px -3px rgba(0,0,0,0.55);
-    -moz-box-shadow: 0px 7px 19px -3px rgba(0,0,0,0.55);
-    box-shadow: 0px 7px 19px -3px rgba(0,0,0,0.55);
-}
-
-.front{
-     transform: translate(-61px, -27px);
-     z-index: 1;
-     object-fit:cover;
-}
-
-.back{
-    transform: translate(200px, 100px); 
-    object-fit:cover;
-}
-
-
-.title-t1, .title-t2{
-    color: #5ccfde;
-    font-weight: 700;
-    text-shadow: 1px -1px 12px #5DD7E7;
-    margin-bottom: 15px;
-    text-align: left;
-}
-
-.title-container{
+.journal-container{
     display: flex;
-    flex-direction: column;
-    width: 60%;
-}
-
-.size-title{
-    font-size: 80px;
-}
-
-.size-subtitle{
-    font-size: 35px;
-}
-
-.size-desc{
-    font-size: 1.5em;
-}
-
-.size-button{
-    font-size: 0.7em;
-}
-
-.button-b1{
-    display: flex;
-    justify-content: center;
     align-items: center;
-    margin-top: 30px;
-    width: 50%;
-    height: 3rem;
-    background-color:#49ff18;
-    color: #FFFFFF;
-    font-weight: 700;
-    border-radius: 10px;
-    box-shadow: 0px 8px 28px -2px rgba(0,0,0,0.66);
-    -webkit-box-shadow: 0px 8px 28px -2px rgba(0,0,0,0.66);
-    -moz-box-shadow: 0px 8px 28px -2px rgba(0,0,0,0.66);
-    cursor: pointer;
-}
-
-.button-container{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.about-container{
-    display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
-    width: 100%;
-    height: 60rem;
-    
-    justify-content: center;
-    padding-top: 10rem;
+    width: 80%;
+    min-height: 40rem;
+    padding-right: 2.5rem;
+    box-sizing: border-box;
+    margin:auto;
 }
 
-.about-box{
+.journal-box{
     display: flex;
-    justify-content: center;
-    width: 50%;
-    height: 30rem;
-    border: 1px solid #FFFFFF;
-}
-
-.about-text{
-    display: flex;
+    align-items: baseline;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.title-about{
-    font-weight: 700;
-    margin-bottom: 15px;
-}
-
-.image-build{
-    height:25rem;
-    width: 45%;
-    margin-right: 15px;
-    margin-top: 50px;
-}
-
-.treatment-container{
-    background-image: url("../images/fundo-do-padrao-geometrico_1319-214.png");
-    width: 100%;
-    height: 30rem;
-    margin-top: 10px;
-    padding-top: 50px;
-    box-shadow: inset 0 0 20px rgba(0,0,0,1);
-}
-
-.title-t3{
-    color: #38be13;
-    text-align: center;
-}
-
-.day-button{
-    position: relative;
-    width: 12%;
-    height: 6rem;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-     display: flex;
-     flex-wrap: wrap;
-    justify-content: center;
-    
-    align-items: center; 
-    border: 3px solid #38be13;
-}
-
-.day{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #FFFFFF;
-    font-weight: 700;
-    position: absolute;
-    width: 60%;
-    height: 2rem;
-    border-radius: 8px;
-    background-color: #38be13;
-    transform: translate(3%, -140%); 
-   
-}
-
-.treatment-days{
-    display: flex;
     justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
+    height: 25rem;
+    width: 20%;
+    font-family: 'Inter', cursive;
+}
+
+.title-journal{
+    color:#6FAEFC;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 0.5rem;
+}
+
+.data-journal{
+    font-size: 15px;
+    margin-bottom: 0.5rem; 
+}
+
+.img-journal{
+    object-fit:fill;
+    width:90%;
+    height:12rem;
+    margin-bottom: 0.5rem;
+}
+
+.button-journal{
+    margin: auto;
+    font-weight:700;
+    width: 35%;
+    height: 2rem;
+    background-color: #6FAEFC;
+    color: #FFFFFF;
+    font-size: 12px;
+    border-radius: 6px;
+    margin-top: 1rem;
+}
+
+.desc-t1{
+    width: 90%;
+}
+
+.button-box{
     width: 100%;
-    height: 20rem;
+    height: 4rem;
 }
 
-.time{
+.button-journal-all{
+   width: 26%;
+   height: 2rem;
+   border: 3px solid #6FAEFC;
+   color:#6FAEFC;
    font-weight: 700;
-   font-size: large;
+   border-radius: 10px;
+   font-family: 'Inter', cursive;
+   box-shadow: 7px 5px 13px -6px rgba(0,0,0,0.75);
+   -webkit-box-shadow: 7px 5px 13px -6px rgba(0,0,0,0.75);
+   -moz-box-shadow: 7px 5px 13px -6px rgba(0,0,0,0.75);
 }
 
-.service-container{
-    height: 20rem;
+.button-journal-all:hover{
+   cursor:pointer;
+   width: 27%;
+   height: 2.2rem;
+   transition: 500ms linear; 
+}
+
+.banner{
+    width: 30%;
+    background-color: #635ca1;
+    color: #FFFFFF;
+    font-weight: 700;
 }
